FIX: swap out checkmarks with fontawesome icons + fix alignment for viewports width  795px+

--- a/admin/public/css/signup.css
+++ b/admin/public/css/signup.css
@@ -5,14 +5,15 @@ body { background-color: #F6F6F6; }
 header { background-color: #FFFFFF; width: 100%; /*height: 123px;*/ display: inline-block; }
 header .headercontent { width: 1050px; margin-left: auto; margin-right: auto; }
 header .logo { float: left; width: 220px; margin-top: 20px; }
-header .steps { float: left; width: 450px; height: 25px; margin-left: 114px; margin-top: 48px; }
+header .steps { float: left; width: 460px; /*height: 25px; */margin-left: 114px; margin-top: 48px; }
 header .steps div { float: left; margin-right: 8px; }
-header .steps-desc { float: left; width: 450px; height: 20px; margin-left: 104px; margin-top: 1px; font-size: 12px; }
+header .steps-desc { float: left; width: 470px; height: 20px; margin-left: 104px; margin-top: 1px; font-size: 12px; }
 header .steps-desc div { float: left; }
-header .steps-desc #step2 { margin-left: 46px; }
-header .steps-desc #step3 { margin-left: 19px; }
-header .steps-desc #step4 { margin-left: 13px; }
-header .steps-desc #step5 { margin-left: 41px; }
+header .steps-desc #step2 { margin-left: 53px; }
+header .steps-desc #step3 { margin-left: 26px; }
+header .steps-desc #step4 { margin-left: 27px; }
+header .steps-desc #step5 { margin-left: 56px; }
+.divider img {padding-bottom: 5px; }
 h3 { color: #2A3644; font-weight: bold; font-size: 31px; }
 
 .content { width: 1070px; margin-left: auto; margin-right: auto; }
@@ -649,12 +650,3 @@ header .headercontent{width: 90%; margin: 0 auto;}
       width: 90%;
   }
 }
-
-
-
-
-
-
-
-
-
